--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+             "C:\\Users\\emirc\\Desktop\\AngularProject\\my-angular-project\\node_modules\\jquery\\dist\\jquery.min.js"
+            ]
           },
           "configurations": {
             "production": {
